; ModuleID = '/home/carl/AnghaBench/micropython/ports/stm32/boards/NETDUINO_PLUS_2/extr_board_init.c_NETDUINO_PLUS_2_board_early_init.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/stm32/boards/NETDUINO_PLUS_2/extr_board_init.c_NETDUINO_PLUS_2_board_early_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8*, i32, i32, i32 }

@GPIO_SPEED_FREQ_VERY_HIGH = common dso_local global i32 0, align 4
@GPIO_MODE_OUTPUT_PP = common dso_local global i32 0, align 4
@GPIO_PULLUP = common dso_local global i32 0, align 4
@GPIO_PIN_2 = common dso_local global i8* null, align 8
@GPIOB = common dso_local global i32 0, align 4
@GPIO_PIN_SET = common dso_local global i32 0, align 4
@GPIO_PIN_1 = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @NETDUINO_PLUS_2_board_early_init() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  %2 = call i32 (...) @__HAL_RCC_GPIOB_CLK_ENABLE()
  %3 = load i32, i32* @GPIO_SPEED_FREQ_VERY_HIGH, align 4
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 3
  store i32 %3, i32* %4, align 8
  %5 = load i32, i32* @GPIO_MODE_OUTPUT_PP, align 4
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  store i32 %5, i32* %6, align 4
  %7 = load i32, i32* @GPIO_PULLUP, align 4
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  store i32 %7, i32* %8, align 8
  %9 = load i8*, i8** @GPIO_PIN_2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i8* %9, i8** %10, align 8
  %11 = load i32, i32* @GPIOB, align 4
  %12 = call i32 @HAL_GPIO_Init(i32 %11, %struct.TYPE_3__* %1)
  %13 = load i32, i32* @GPIOB, align 4
  %14 = load i8*, i8** @GPIO_PIN_2, align 8
  %15 = load i32, i32* @GPIO_PIN_SET, align 4
  %16 = call i32 @HAL_GPIO_WritePin(i32 %13, i8* %14, i32 %15)
  ret void
}

declare dso_local i32 @__HAL_RCC_GPIOB_CLK_ENABLE(...) #1

declare dso_local i32 @HAL_GPIO_Init(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @HAL_GPIO_WritePin(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
